--- a/FrontEnd/dashboard.html
+++ b/FrontEnd/dashboard.html
@@ -19,7 +19,7 @@
 
     <!-- Conteúdo principal -->
     <main class="main-content">
-        <h1>📈 Painel LIA - Seu Futuro Financeiro</h1>
+        <h1>🤖 Painel LIA - Seu Futuro Financeiro</h1>
         <p>Sua jornada financeira começa aqui. Explore as opções abaixo:</p>
 
         <section class="dashboard-sections">
@@ -35,7 +35,7 @@
                 <p>Descubra sugestões personalizadas para investir melhor.</p>
             </div>
 
-            <div class="section-card" onclick="window.location.href='resumo_geral.html'">
+            <div class="section-card" onclick="window.location.href='resumo.html'">
                 <div class="emoji">📋</div>
                 <h3>Resumo<br>Geral</h3>
                 <p>Veja um panorama das suas metas, aportes e projeções em um só lugar.</p>
