--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIA - Bem-vindo</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LIA - Bem-vindo</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-    <header class="header">
-        <img src="images/lia.png" alt="Logo LIA" class="logo">
-    </header>
+  <header class="header">
+    <img src="images/lia.png" alt="Logo LIA" class="logo">
+  </header>
 
-    <main class="main-content">
-        <h1>🎯 Bem-vindo ao LIA!</h1>
-        <p>Organize, planeje e visualize seu futuro financeiro com a nossa IA.</p>
+  <main class="main-content welcome-page">
+    <div class="welcome-card">
+      <h1>🎯 Bem-vindo ao LIA!</h1>
+      <p>Organize, planeje e visualize seu futuro financeiro com a nossa IA.</p>
 
+      <div class="welcome-buttons">
         <button class="cta-button" onclick="window.location.href='cadastro.html'">🆕 Criar Conta</button>
         <button class="cta-button" onclick="window.location.href='login.html'">🔐 Fazer Login</button>
-    </main>
+      </div>
+    </div>
+  </main>
 
-    <footer class="footer">
-        <p>&copy; 2025 LIA - Assistente Financeiro. Todos os direitos reservados.</p>
-    </footer>
+  <footer class="footer">
+    <p>&copy; 2025 LIA - Assistente Financeiro. Todos os direitos reservados.</p>
+  </footer>
 
 </body>
 </html>
