--- a/FrontEnd/visualizacao_ia.html
+++ b/FrontEnd/visualizacao_ia.html
@@ -11,7 +11,7 @@
   <header class="header">
     <img src="images/lia.png" alt="Logo LIA" class="logo">
     <nav class="nav">
-      <button class="nav-button" onclick="window.location.href='dashboard.html'">🏠 Dashboard</button>
+      <button class="nav-button" onclick="window.location.href='investimentos.html'">Voltar</button>
     </nav>
   </header>
 
