--- a/FrontEnd/analise_metas.html
+++ b/FrontEnd/analise_metas.html
@@ -31,13 +31,42 @@
   <header class="header">
     <img src="images/lia.png" alt="Logo LIA" class="logo">
     <nav class="nav">
-      <button class="nav-button" onclick="window.location.href='planejamento.html'">🔙 Voltar</button>
+      <button class="nav-button" onclick="window.location.href='planejamento.html'">Voltar</button>
     </nav>
   </header>
 
   <main class="main-content">
-    <h1>📈 Análise Inteligente das Metas</h1>
-    <p>Veja se você está no caminho certo para atingir seus objetivos.</p>
+    <h1>📊 Análise Inteligente das Metas</h1>
+    <div style="
+  background-color: #fff;
+  border-left: 5px solid #006400;
+  padding: 25px;
+  margin: 20px auto;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+  max-width: 900px;
+  line-height: 1.6;
+">
+  <h3 style="margin-top: 0; text-align: center; font-size: 1.4rem;">⚙️ Como funciona esta análise?</h3>
+  
+  <p style="text-align: center;">
+    Esta previsão é realizada utilizando <strong style="color: #006400;">Regressão Linear</strong>,
+    um modelo de inteligência que analisa seus aportes passados e calcula a tendência média de crescimento.
+  </p>
+  
+  <p style="text-align: center;">Dessa forma, conseguimos estimar:</p>
+
+  <ul style="padding-left: 30px; margin-top: 10px;">
+    <li>🕓 <strong>Quantos meses (aportes)</strong> ainda são necessários para atingir sua meta.</li>
+    <li>💸 <strong>Quanto você deve investir em cada aporte</strong> para alcançar seu objetivo no prazo.</li>
+  </ul>
+
+  <p style="text-align: center; margin-top: 15px;">
+    🔍 Se seus aportes são <strong>irregulares</strong> (valores diferentes a cada mês),
+    a IA leva isso em conta e ajusta a previsão baseada na <strong>média dos seus aportes anteriores</strong>.
+  </p>
+</div>
+
     <div id="resultado-analise"></div>
   </main>
 
@@ -46,7 +75,7 @@
   </footer>
 
   <script>
-    const user_id = "usuario123"; // substituir futuramente pelo login
+    const user_id = "usuario123";
 
     async function carregarAnalise() {
       try {
@@ -64,9 +93,9 @@
             <p><strong>${meta.nome}</strong></p>
             <p>🎯 Progresso: ${meta.progresso}%</p>
             <p>Status: <span class="${meta.status === 'Atrasado' ? 'status-atrasado' : 'status-em-dia'}">${meta.status}</span></p>
-            <p>Prazo total: ${meta.prazo} meses</p>
-            <p>📅 Estimativa de Conclusão: ${meta.estimativa_conclusao} meses</p>
-            <p>💡 Sugestão de valor mensal: R$${meta.guardar_recomendado.toFixed(2)}</p>
+            <p>📅 Prazo total definido: ${meta.prazo} meses</p>
+            <p>⏳ Estimativa de conclusão: ${meta.estimativa_conclusao === "-" ? "-" : meta.estimativa_conclusao + " aportes restantes"}</p>
+            <p>💡 Sugestão de valor por aporte: <strong>R$${meta.guardar_recomendado.toFixed(2)}</strong></p>
           `;
 
           container.appendChild(div);
