--- a/FrontEnd/quiz.html
+++ b/FrontEnd/quiz.html
@@ -109,7 +109,7 @@
         }
 
         alert(`✅ Perfil identificado: ${data.perfil}\n\n${data.descricao}`);
-        window.location.href = 'dicas.html'; // Redireciona para a página de dicas
+        window.location.href = 'investimentos.html'; // Redireciona para a página de dicas
 
       } catch (erro) {
         console.error('Erro ao enviar respostas:', erro);
